# YAGB

./: README.md
Firmware/: Makefile  build.sh  changelog.txt  stm32f103.ld
Firmware/Software/: Build_Windows.sh  main.c
Firmware/libopencm3/lib/stm32/: UC_Prog.c
Firmware/libopencm3/lib/stm32/f1/: adc.d  adc_common_v1.d  assert.d  can.d  crc_common_all.d  dac_common_all.d  desig.d  dma_common_l1f013.d  dwt.d  ethernet.d  exti_common_all.d  flash.d  flash_common_f01.d  gpio.d  gpio_common_all.d  i2c_common_all.d  iwdg_common_all.d  mac.d  mac_stm32fxx7.d  nvic.d  phy.d  phy_ksz8051mll.d  pwr_common_all.d  rcc.d  rcc_common_all.d  rtc.d  scb.d  spi_common_all.d  spi_common_l1f124.d  st_usbfs_core.d  st_usbfs_v1.d  sync.d  systick.d  timer.d  timer_common_all.d  usart_common_all.d  usart_common_f124.d  usb.d  usb_control.d  usb_f107.d  (+4 more)
Firmware/src/: USB2_Dumper.c  USB2_Dumper.d
PCB/: GB Dumper-cache.lib  GB Dumper.net  GB Dumper.sch  GB Dumper.sch-bak  GB Dumper_SMD.kicad_pcb-bak  GB Dumper_SMD.pro  GB Dumper_Test.txt  fp-info-cache
PCB/fab_smd/: GB Dumper_SMD-B_Adhes.gbr  GB Dumper_SMD-B_CrtYd.gbr  GB Dumper_SMD-B_Cu.gbr  GB Dumper_SMD-B_Fab.gbr  GB Dumper_SMD-B_Mask.gbr  GB Dumper_SMD-B_Paste.gbr  GB Dumper_SMD-B_SilkS.gbr  GB Dumper_SMD-Cmts_User.gbr  GB Dumper_SMD-Dwgs_User.gbr  GB Dumper_SMD-Eco1_User.gbr  GB Dumper_SMD-Eco2_User.gbr  GB Dumper_SMD-Edge_Cuts.gbr  GB Dumper_SMD-F_Adhes.gbr  GB Dumper_SMD-F_CrtYd.gbr  GB Dumper_SMD-F_Cu.gbr  GB Dumper_SMD-F_Fab.gbr  GB Dumper_SMD-F_Mask.gbr  GB Dumper_SMD-F_Paste.gbr  GB Dumper_SMD-F_SilkS.gbr  GB Dumper_SMD-NPTH.drl  GB Dumper_SMD-PTH.drl
PCB/modules/: DIP-40_W15.24mm.kicad_mod  GB_CART_4holes.kicad_mod  LOGO.kicad_mod  noctali.kicad_mod  noctali1.kicad_mod  noctali2.kicad_mod  yagb.kicad_mod  yagb2.kicad_mod
Software/: Build_Linux.sh  CMakeLists.txt  Toolchain-Ubuntu-mingw64.cmake  main.c
